Update ServerName and list of aliases

--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
     ServerAdmin info@cyclestreets.net
-    ServerName toolkit.cyclestreets.net
+    ServerName www.cyclescape.net
+    ServerAlias toolkit.cyclestreets.net cyclescape.net cyclescape.com cyclescape.org cyclescape.org.uk
 
     DocumentRoot /var/www/toolkit/current/public
     <Directory /var/www/toolkit/current/public>
