--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -3,10 +3,19 @@
     ServerName www.cyclescape.net
     ServerAlias toolkit.cyclestreets.net cyclescape.net cyclescape.com cyclescape.org cyclescape.org.uk
 
+    AddExternalAuth pwauth /usr/sbin/pwauth
+    SetExternalAuthMethod pwauth pipe
+
     DocumentRoot /var/www/toolkit/current/public
     <Directory /var/www/toolkit/current/public>
         AllowOverride all
         Options -MultiViews
+
+        AuthType Basic
+        AuthName "Beta Testing"
+        AuthBasicProvider external
+        AuthExternal pwauth
+        require valid-user
     </Directory>
 
     RailsEnv production
