Support redirection of non-org domains, and non-www to www

--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -1,7 +1,18 @@
 <VirtualHost *:80>
     ServerAdmin info@cyclestreets.net
-    ServerName www.cyclescape.net
-    ServerAlias toolkit.cyclestreets.net cyclescape.net cyclescape.com cyclescape.org cyclescape.org.uk
+
+    ServerName www.cyclescape.org
+    ServerAlias cyclescape.org *.cyclescape.org
+    ServerAlias cyclescape.net *.cyclescape.net
+    ServerAlias cyclescape.com *.cyclescape.com
+    ServerAlias cyclescape.org.uk *.cyclescape.org.uk
+
+    RewriteEngine on
+    RewriteCond %{HTTP_HOST} !cyclescape.org$ [NC]
+    RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
+
+    RewriteCond %{HTTP_HOST} ^cyclescape.org$ [NC]
+    RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
 
     AddExternalAuth pwauth /usr/sbin/pwauth
     SetExternalAuthMethod pwauth pipe
