Strip the www off of group urls, and add some comments

--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -8,11 +8,22 @@
     ServerAlias cyclescape.org.uk *.cyclescape.org.uk
 
     RewriteEngine on
+
+    # If the host doesn't end in the .org version, redirect
+
     RewriteCond %{HTTP_HOST} !cyclescape.org$ [NC]
     RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
 
+    # If the host is exactly cyclescape.org, redirect to www
+    # This avoids messing up placeford.cyclescape.org
+
     RewriteCond %{HTTP_HOST} ^cyclescape.org$ [NC]
     RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
+
+    # for e.g. www.placeford.cyclescape.org, strip the www
+
+    RewriteCond %{HTTP_HOST} ^www\.(.+)\.cyclescape.org$ [NC]
+    RewriteRule ^/(.*) http://%1.cyclescape.org/$1 [L,R]
 
     AddExternalAuth pwauth /usr/sbin/pwauth
     SetExternalAuthMethod pwauth pipe
