Add PassengerPreStart and MinInstances, with caveats

--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -41,4 +41,13 @@
     </Directory>
 
     RailsEnv production
+
+    # Note that prestarts won't work until the http basic auth
+    # is removed, but the min_instances should help in any case.
+    # Also, prestarts will only work on the live server unless
+    # https://github.com/FooBarWidget/passenger/pull/31 is merged
+    # and we update to the relevant version.
+
+    PassengerMinInstances 1
+    PassengerPreStart http://www.cyclescape.org/
 </VirtualHost>
