Update mailbox configuration template.

--- a/cookbooks/toolkit/templates/default/mailboxes.example.yml
+++ b/cookbooks/toolkit/templates/default/mailboxes.example.yml
@@ -1,5 +1,7 @@
 primary:
-  address: "<%= @server %>"
+  host: "<%= @server %>"
   user_name: "<%= @username %>"
   password: "<%= @password %>"
   authentication: "PLAIN"
+  mailbox: "INBOX"
+  mailbox_processor: "InboundMailProcessor"
