--- a/cookbooks/toolkit/templates/default/mailboxes.example.yml
+++ b/cookbooks/toolkit/templates/default/mailboxes.example.yml
@@ -4,5 +4,5 @@ primary:
   password: "<%= @password %>"
   authentication: "PLAIN"
   mailbox: "INBOX"
-  mailbox_processor: "InboundMailProcessor"
+  mail_processor: "InboundMailProcessor"
   days_to_retain: 10
