Add SSL support

--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -51,3 +51,60 @@
     PassengerMinInstances 1
     PassengerPreStart http://www.cyclescape.org/
 </VirtualHost>
+
+<IfModule mod_ssl.c>
+  <VirtualHost *:443>
+      ServerAdmin info@cyclestreets.net
+
+      ServerName www.cyclescape.org
+      ServerAlias cyclescape.org *.cyclescape.org
+      ServerAlias cyclescape.net *.cyclescape.net
+      ServerAlias cyclescape.com *.cyclescape.com
+      ServerAlias cyclescape.org.uk *.cyclescape.org.uk
+
+      RewriteEngine on
+
+      # If the host doesn't end in the .org version, redirect
+
+      RewriteCond %{HTTP_HOST} !cyclescape.org$ [NC]
+      RewriteRule ^/(.*) https://www.cyclescape.org/$1 [L,R]
+
+      # If the host is exactly cyclescape.org, redirect to www
+      # This avoids messing up placeford.cyclescape.org
+
+      RewriteCond %{HTTP_HOST} ^cyclescape.org$ [NC]
+      RewriteRule ^/(.*) https://www.cyclescape.org/$1 [L,R]
+
+      # for e.g. www.placeford.cyclescape.org, strip the www
+
+      RewriteCond %{HTTP_HOST} ^www\.(.+)\.cyclescape.org$ [NC]
+      RewriteRule ^/(.*) https://%1.cyclescape.org/$1 [L,R]
+
+      SSLEngine on
+      SSLCertificateFile /etc/apache2/ssl/cyclescape-org.ssl.crt
+      SSLCertificateKeyFile /etc/apache2/ssl/cyclescape-org.ssl.nopassword.key
+      SSLCertificateChainFile /etc/apache2/ssl/startcom.sub.class2.server.ca.cer
+      SSLCACertificateFile /etc/apache2/ssl/startcom.ca.cer
+      SSLProtocol all -SSLv2
+      SetEnvIf User-Agent "MSIE [2-5]" \
+      nokeepalive ssl-unclean-shutdown \
+      downgrade-1.0 force-response-1.0
+
+      AddExternalAuth pwauth /usr/sbin/pwauth
+      SetExternalAuthMethod pwauth pipe
+
+      DocumentRoot /var/www/toolkit/current/public
+      <Directory /var/www/toolkit/current/public>
+          AllowOverride all
+          Options -MultiViews
+
+          AuthType Basic
+          AuthName "Beta Testing"
+          AuthBasicProvider external
+          AuthExternal pwauth
+          require valid-user
+      </Directory>
+
+      RailsEnv production
+  </VirtualHost>
+</IfModule>
