--- a/cookbooks/toolkit/templates/default/passenger.vhost.conf
+++ b/cookbooks/toolkit/templates/default/passenger.vhost.conf
@@ -41,6 +41,14 @@
 
     PassengerMinInstances 1
     PassengerPreStart http://www.cyclescape.org/
+
+    <LocationMatch "^/assets/.*$">
+      Header unset ETag
+      FileETag None
+      # RFC says only cache for 1 year
+      ExpiresActive On
+      ExpiresDefault "access plus 1 year"
+    </LocationMatch>
 </VirtualHost>
 
 <IfModule mod_ssl.c>
@@ -88,5 +96,13 @@
       </Directory>
 
       RailsEnv production
+
+      <LocationMatch "^/assets/.*$">
+        Header unset ETag
+        FileETag None
+        # RFC says only cache for 1 year
+        ExpiresActive On
+        ExpiresDefault "access plus 1 year"
+      </LocationMatch>
   </VirtualHost>
 </IfModule>
