--- a/cookbooks/passenger-gem/templates/default/passenger.module.conf
+++ b/cookbooks/passenger-gem/templates/default/passenger.module.conf
@@ -1,3 +1,3 @@
-LoadModule passenger_module /var/lib/gems/1.9.1/gems/passenger-3.0.9/ext/apache2/mod_passenger.so
-PassengerRoot /var/lib/gems/1.9.1/gems/passenger-3.0.9
+LoadModule passenger_module /var/lib/gems/1.9.1/gems/passenger-<%= @passenger_version %>/ext/apache2/mod_passenger.so
+PassengerRoot /var/lib/gems/1.9.1/gems/passenger-<%= @passenger_version %>
 PassengerRuby /usr/bin/ruby1.9.1
