--- a/cookbooks/passenger-gem/templates/default/passenger.module.conf
+++ b/cookbooks/passenger-gem/templates/default/passenger.module.conf
@@ -1,5 +1,5 @@
-LoadModule passenger_module /var/lib/gems/<= @gem_folder =>/gems/passenger-<%= @passenger_version %>/buildout/apache2/mod_passenger.so
+LoadModule passenger_module /var/lib/gems/<%= @gem_folder %>/gems/passenger-<%= @passenger_version %>/buildout/apache2/mod_passenger.so
 <IfModule mod_passenger.c>
-  PassengerRoot /var/lib/gems/<= @gem_folder %>/gems/passenger-<%= @passenger_version %>
-  PassengerDefaultRuby /usr/bin/ruby<= @ruby_version %>
+  PassengerRoot /var/lib/gems/<%= @gem_folder %>/gems/passenger-<%= @passenger_version %>
+  PassengerDefaultRuby /usr/bin/ruby<%= @ruby_version %>
 </IfModule>
