Add extra munin master

--- a/cookbooks/munin/templates/default/munin-node.conf
+++ b/cookbooks/munin/templates/default/munin-node.conf
@@ -36,6 +36,7 @@ ignore_file \.pod$
 allow ^127\.0\.0\.1$
 allow ^dev\.cyclestreets\.net$
 allow ^93\.93\.128\.92$
+allow ^46\.235\.226\.213$
 
 # If you have installed the Net::CIDR perl module, you can use one or more
 # cidr_allow and cidr_deny address/mask patterns.  A connecting client must
