Add env to pssenger host

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -31,7 +31,7 @@
         Options -MultiViews
     </Directory>
 
-    RailsEnv production
+    RailsEnv <%= @environment %>
 
     # Note that prestarts won't work until the http basic auth
     # is removed, but the min_instances should help in any case.
@@ -95,7 +95,7 @@
           Options -MultiViews
       </Directory>
 
-      RailsEnv production
+      RailsEnv <%= @environment %>
 
       <LocationMatch "^/assets/.*$">
         Header unset ETag
