Add new apache perms

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -28,6 +28,7 @@
     DocumentRoot /var/www/cyclescape/current/public
     <Directory /var/www/cyclescape/current/public>
         AllowOverride all
+        Require all granted
         Options -MultiViews
     </Directory>
 
@@ -92,6 +93,7 @@
       DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
+          Require all granted
           Options -MultiViews
       </Directory>
 
