--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -85,7 +85,10 @@
       SSLCertificateKeyFile /etc/apache2/ssl/cyclescape-org.ssl.nopassword.key
       SSLCertificateChainFile /etc/apache2/ssl/startcom.sub.class2.server.ca.cer
       SSLCACertificateFile /etc/apache2/ssl/startcom.ca.cer
-      SSLProtocol all -SSLv2
+
+      SSLProtocol All -SSLv2 -SSLv3
+      SSLHonorCipherOrder On
+      SSLCipherSuite ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
 
       DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
