--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -83,8 +83,7 @@
       SSLEngine on
       SSLCertificateFile /etc/apache2/ssl/cyclescape-org.ssl.crt
       SSLCertificateKeyFile /etc/apache2/ssl/cyclescape-org.ssl.nopassword.key
-      SSLCertificateChainFile /etc/apache2/ssl/startcom.sub.class2.server.ca.cer
-      SSLCACertificateFile /etc/apache2/ssl/startcom.ca.cer
+      SSLCertificateChainFile /etc/apache2/ssl/ca.ssl.cer
 
       SSLProtocol All -SSLv2 -SSLv3
       SSLHonorCipherOrder On
