--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -80,25 +80,6 @@
       RewriteCond %{HTTP_HOST} ^www\.(.+)\.cyclescape.org$ [NC]
       RewriteRule ^/(.*) https://%1.cyclescape.org/$1 [L,R]
 
-      SSLEngine on
-      SSLCertificateFile /etc/apache2/ssl/cert.pem
-      SSLCertificateKeyFile /etc/apache2/ssl/privkey.pem
-      SSLCertificateChainFile /etc/apache2/ssl/chain.pem
-
-      # From https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=apache-2.4.7&openssl=1.0.1f&hsts=no&profile=intermediate
-      # intermediate configuration, tweak to your needs
-      SSLProtocol             all -SSLv3
-      SSLCipherSuite          ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS
-      SSLHonorCipherOrder     on
-      SSLCompression          off
-
-      # OCSP Stapling, only in httpd 2.3.3 and later
-      SSLUseStapling          on
-      SSLStaplingResponderTimeout 5
-      SSLStaplingReturnResponderErrors off
-      SSLStaplingCache        shmcb:/var/run/ocsp(128000)
-      # END
-
       DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
@@ -115,5 +96,25 @@
         ExpiresActive On
         ExpiresDefault "access plus 1 year"
       </LocationMatch>
+
+      # From https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=apache-2.4.7&openssl=1.0.1f&hsts=no&profile=intermediate
+      # SSL-CONFIG-START
+      SSLEngine on
+      SSLCertificateFile /etc/apache2/ssl/cert.pem
+      SSLCertificateKeyFile /etc/apache2/ssl/privkey.pem
+      SSLCertificateChainFile /etc/apache2/ssl/chain.pem
   </VirtualHost>
+
+  # intermediate configuration, tweak to your needs
+  SSLProtocol             all -SSLv3
+  SSLCipherSuite          ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS
+  SSLHonorCipherOrder     on
+  SSLCompression          off
+
+  # OCSP Stapling, only in httpd 2.3.3 and later
+  SSLUseStapling          on
+  SSLStaplingResponderTimeout 5
+  SSLStaplingReturnResponderErrors off
+  SSLStaplingCache        shmcb:/var/run/ocsp(128000)
+  # SSL-CONFIG-END
 </IfModule>
