Make server name configurable

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -1,29 +1,26 @@
 <VirtualHost *:80>
     ServerAdmin info@cyclestreets.net
 
-    ServerName www.cyclescape.org
-    ServerAlias cyclescape.org *.cyclescape.org
-    ServerAlias cyclescape.net *.cyclescape.net
-    ServerAlias cyclescape.com *.cyclescape.com
-    ServerAlias cyclescape.org.uk *.cyclescape.org.uk
+    ServerName www.<%= @server_name %>
+    ServerAlias <%= @server_name  %> *.<%= @server_name %>
 
     RewriteEngine on
 
     # If the host doesn't end in the .org version, redirect
 
-    RewriteCond %{HTTP_HOST} !cyclescape.org$ [NC]
-    RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
+    RewriteCond %{HTTP_HOST} !<%= @server_name %>$ [NC]
+    RewriteRule ^/(.*) http://www.<%= @server_name %>/$1 [L,R]
 
-    # If the host is exactly cyclescape.org, redirect to www
-    # This avoids messing up placeford.cyclescape.org
+    # If the host is exactly <%= @server_name %>, redirect to www
+    # This avoids messing up placeford.<%= @server_name %>
 
-    RewriteCond %{HTTP_HOST} ^cyclescape.org$ [NC]
-    RewriteRule ^/(.*) http://www.cyclescape.org/$1 [L,R]
+    RewriteCond %{HTTP_HOST} ^<%= @server_name %>$ [NC]
+    RewriteRule ^/(.*) http://www.<%= @server_name %>/$1 [L,R]
 
-    # for e.g. www.placeford.cyclescape.org, strip the www
+    # for e.g. www.placeford.<%= @server_name %>, strip the www
 
-    RewriteCond %{HTTP_HOST} ^www\.(.+)\.cyclescape.org$ [NC]
-    RewriteRule ^/(.*) http://%1.cyclescape.org/$1 [L,R]
+    RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
+    RewriteRule ^/(.*) http://%1.<%= @server_name %>/$1 [L,R]
 
     DocumentRoot /var/www/cyclescape/current/public
     <Directory /var/www/cyclescape/current/public>
@@ -41,7 +38,7 @@
     # and we update to the relevant version.
 
     PassengerMinInstances 1
-    PassengerPreStart http://www.cyclescape.org/
+    PassengerPreStart http://www.<%= @server_name %>/
 
     <LocationMatch "^/assets/.*$">
       Header unset ETag
@@ -56,29 +53,26 @@
   <VirtualHost *:443>
       ServerAdmin info@cyclestreets.net
 
-      ServerName www.cyclescape.org
-      ServerAlias cyclescape.org *.cyclescape.org
-      ServerAlias cyclescape.net *.cyclescape.net
-      ServerAlias cyclescape.com *.cyclescape.com
-      ServerAlias cyclescape.org.uk *.cyclescape.org.uk
+      ServerName www.<%= @server_name %>
+      ServerAlias <%= @server_name %> *.<%= @server_name %>
 
       RewriteEngine on
 
       # If the host doesn't end in the .org version, redirect
 
-      RewriteCond %{HTTP_HOST} !cyclescape.org$ [NC]
-      RewriteRule ^/(.*) https://www.cyclescape.org/$1 [L,R]
+      RewriteCond %{HTTP_HOST} !<%= @server_name %>$ [NC]
+      RewriteRule ^/(.*) https://www.<%= @server_name %>/$1 [L,R]
 
-      # If the host is exactly cyclescape.org, redirect to www
-      # This avoids messing up placeford.cyclescape.org
+      # If the host is exactly <%= @server_name %>, redirect to www
+      # This avoids messing up placeford.<%= @server_name %>
 
-      RewriteCond %{HTTP_HOST} ^cyclescape.org$ [NC]
-      RewriteRule ^/(.*) https://www.cyclescape.org/$1 [L,R]
+      RewriteCond %{HTTP_HOST} ^<%= @server_name %>$ [NC]
+      RewriteRule ^/(.*) https://www.<%= @server_name %>/$1 [L,R]
 
-      # for e.g. www.placeford.cyclescape.org, strip the www
+      # for e.g. www.placeford.<%= @server_name %>, strip the www
 
-      RewriteCond %{HTTP_HOST} ^www\.(.+)\.cyclescape.org$ [NC]
-      RewriteRule ^/(.*) https://%1.cyclescape.org/$1 [L,R]
+      RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
+      RewriteRule ^/(.*) https://%1.<%= @server_name %>/$1 [L,R]
 
       DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
