Add basic auth to staging

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -25,8 +25,13 @@
     DocumentRoot /var/www/cyclescape/current/public
     <Directory /var/www/cyclescape/current/public>
         AllowOverride all
-        Require all granted
         Options -MultiViews
+        <% if @environment == "staging" %>
+        AuthType Basic
+        AuthName "Restricted Content"
+        AuthUserFile "/etc/apache2/passwords"
+        Require valid-user
+        <% end %>
     </Directory>
 
     RailsEnv <%= @environment %>
@@ -77,8 +82,13 @@
       DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
-          Require all granted
           Options -MultiViews
+          <% if @environment == "staging" %>
+          AuthType Basic
+          AuthName "Restricted Content"
+          AuthUserFile "/etc/apache2/passwords"
+          Require valid-user
+          <% end %>
       </Directory>
 
       RailsEnv <%= @environment %>
