Fix apache permissions

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -31,6 +31,8 @@
         AuthName "Restricted Content"
         AuthUserFile "/etc/apache2/passwords"
         Require valid-user
+        <% else %>
+        Require all granted
         <% end %>
     </Directory>
 
@@ -88,6 +90,8 @@
           AuthName "Restricted Content"
           AuthUserFile "/etc/apache2/passwords"
           Require valid-user
+          <% else %>
+          Require all granted
           <% end %>
       </Directory>
 
