Add maintenance mode
If maintenance.enable file exists in the public folder we will be in maintenance mode

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -1,10 +1,19 @@
 <VirtualHost *:80>
     ServerAdmin info@cyclestreets.net
+    DocumentRoot /var/www/cyclescape/current/public
 
     ServerName www.<%= @server_name %>
     ServerAlias <%= @server_name  %> *.<%= @server_name %>
 
     RewriteEngine on
+
+    # If maintenance.enable file exists we are in maintenance mode!
+    RewriteCond %{DOCUMENT_ROOT}/maintenance.html -f
+    RewriteCond %{DOCUMENT_ROOT}/maintenance.enable -f
+    RewriteCond %{SCRIPT_FILENAME} !maintenance.html
+    RewriteRule ^.*$ /maintenance.html [R=503,L]
+    ErrorDocument 503 /maintenance.html
+    Header Set Cache-Control "max-age=0, no-store"
 
     # If the host doesn't end in the .org version, redirect
 
@@ -22,7 +31,6 @@
     RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
     RewriteRule ^/(.*) http://%1.<%= @server_name %>/$1 [L,R]
 
-    DocumentRoot /var/www/cyclescape/current/public
     <Directory /var/www/cyclescape/current/public>
         AllowOverride all
         Options -MultiViews
@@ -61,9 +69,19 @@
       ServerAdmin info@cyclestreets.net
 
       ServerName www.<%= @server_name %>
+      DocumentRoot /var/www/cyclescape/current/public
+
       ServerAlias <%= @server_name %> *.<%= @server_name %>
 
       RewriteEngine on
+
+      # If maintenance.enable file exists we are in maintenance mode!
+      RewriteCond %{DOCUMENT_ROOT}/maintenance.html -f
+      RewriteCond %{DOCUMENT_ROOT}/maintenance.enable -f
+      RewriteCond %{SCRIPT_FILENAME} !maintenance.html
+      RewriteRule ^.*$ /maintenance.html [R=503,L]
+      ErrorDocument 503 /maintenance.html
+      Header Set Cache-Control "max-age=0, no-store"
 
       # If the host doesn't end in the .org version, redirect
 
@@ -81,7 +99,6 @@
       RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
       RewriteRule ^/(.*) https://%1.<%= @server_name %>/$1 [L,R]
 
-      DocumentRoot /var/www/cyclescape/current/public
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
           Options -MultiViews
