Try to get passenger pre-start working

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -46,15 +46,6 @@
 
     RailsEnv <%= @environment %>
 
-    # Note that prestarts won't work until the http basic auth
-    # is removed, but the min_instances should help in any case.
-    # Also, prestarts will only work on the live server unless
-    # https://github.com/FooBarWidget/passenger/pull/31 is merged
-    # and we update to the relevant version.
-
-    PassengerMinInstances 1
-    PassengerPreStart http://www.<%= @server_name %>/
-
     <LocationMatch "^/assets/.*$">
       Header unset ETag
       FileETag None
@@ -113,6 +104,7 @@
       </Directory>
 
       RailsEnv <%= @environment %>
+      PassengerMinInstances 1
 
       <LocationMatch "^/assets/.*$">
         Header unset ETag
@@ -142,4 +134,5 @@
   SSLStaplingReturnResponderErrors off
   SSLStaplingCache        shmcb:/var/run/ocsp(128000)
   # SSL-CONFIG-END
+  PassengerPreStart https://www.<%= @server_name %>/
 </IfModule>
