Fix prestart for staging

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -134,5 +134,10 @@
   SSLStaplingReturnResponderErrors off
   SSLStaplingCache        shmcb:/var/run/ocsp(128000)
   # SSL-CONFIG-END
+
+  <% if @environment == "staging" %>
+  PassengerPreStart https://<%= basic_auth_username %>:<%= basic_auth_password %>@www.<%= @server_name %>/
+  <% else %>
   PassengerPreStart https://www.<%= @server_name %>/
+  <% end %>
 </IfModule>
