Fix passenger auth config

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -136,7 +136,7 @@
   # SSL-CONFIG-END
 
   <% if @environment == "staging" %>
-  PassengerPreStart https://<%= basic_auth_username %>:<%= basic_auth_password %>@www.<%= @server_name %>/
+  PassengerPreStart https://<%= @basic_auth_username %>:<%= @basic_auth_password %>@www.<%= @server_name %>/
   <% else %>
   PassengerPreStart https://www.<%= @server_name %>/
   <% end %>
