--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -45,6 +45,7 @@
     </Directory>
 
     RailsEnv <%= @environment %>
+    PassEnv <%= @pass_env %>
 
     <LocationMatch "^/assets/.*$">
       Header unset ETag
@@ -104,6 +105,7 @@
       </Directory>
 
       RailsEnv <%= @environment %>
+      PassEnv <%= @pass_env %>
       PassengerMinInstances 1
 
       <LocationMatch "^/assets/.*$">
