Fix passenger issues

--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -30,6 +30,12 @@
 
     RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
     RewriteRule ^/(.*) http://%1.<%= @server_name %>/$1 [L,R]
+    # https://github.com/phusion/passenger/issues/2409
+    PassengerPreloadBundler on
+    # https://github.com/phusion/passenger/issues/2397
+    PassengerInstanceRegistryDir /var/run/passenger-instreg
+    # it was crashing
+    PassengerDisableAnonymousTelemetry o
 
     <Directory /var/www/cyclescape/current/public>
         AllowOverride all
@@ -89,6 +95,13 @@
 
       RewriteCond %{HTTP_HOST} ^www\.(.+)\.<%= @server_name %>$ [NC]
       RewriteRule ^/(.*) https://%1.<%= @server_name %>/$1 [L,R]
+
+      # https://github.com/phusion/passenger/issues/2409
+      PassengerPreloadBundler on
+      # https://github.com/phusion/passenger/issues/2397
+      PassengerInstanceRegistryDir /var/run/passenger-instreg
+      # it was crashing
+      PassengerDisableAnonymousTelemetry o
 
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
