--- a/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
+++ b/local-cookbooks/cyclescape/templates/default/passenger.vhost.conf
@@ -35,7 +35,7 @@
     # https://github.com/phusion/passenger/issues/2397
     PassengerInstanceRegistryDir /var/run/passenger-instreg
     # it was crashing
-    PassengerDisableAnonymousTelemetry o
+    PassengerDisableAnonymousTelemetry off
 
     <Directory /var/www/cyclescape/current/public>
         AllowOverride all
@@ -101,7 +101,7 @@
       # https://github.com/phusion/passenger/issues/2397
       PassengerInstanceRegistryDir /var/run/passenger-instreg
       # it was crashing
-      PassengerDisableAnonymousTelemetry o
+      PassengerDisableAnonymousTelemetry off
 
       <Directory /var/www/cyclescape/current/public>
           AllowOverride all
